--- a/package.json
+++ b/package.json
@@ -20,29 +20,34 @@
     "@nestjs/common": "^5.0.0",
     "@nestjs/core": "^5.0.0",
     "@nestjs/typeorm": "^5.1.0",
+    "bcrypt": "^3.0.0",
+    "class-transformer": "^0.1.9",
+    "class-validator": "^0.9.1",
     "fastify-formbody": "^2.0.0",
     "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
+    "sql.js": "^0.5.0",
     "typeorm": "^0.2.7",
     "typescript": "^2.6.2"
   },
   "devDependencies": {
     "@nestjs/testing": "^5.0.0",
+    "@types/bcrypt": "^2.0.0",
     "@types/express": "^4.0.39",
     "@types/jest": "^21.1.8",
-    "@types/node": "^9.3.0",
+    "@types/node": "^9.6.25",
     "@types/supertest": "^2.0.4",
     "jest": "^21.2.1",
     "nodemon": "^1.14.1",
-    "prettier": "^1.11.1",
+    "prettier": "^1.14.0",
     "supertest": "^3.0.0",
     "ts-jest": "^21.2.4",
     "ts-loader": "^4.1.0",
     "ts-node": "^4.1.0",
-    "tsconfig-paths": "^3.1.1",
+    "tsconfig-paths": "^3.5.0",
     "tslint": "5.3.2",
-    "webpack": "^4.2.0",
+    "webpack": "^4.16.4",
     "webpack-cli": "^2.0.13",
     "webpack-node-externals": "^1.6.0"
   },
